[package]
name = "property-registry"
version = "0.1.0"
description = "Property Registry Program for RentChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "property_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
